fix: use variables for scrollbar styling

--- a/static/styles/_scrollbar.css
+++ b/static/styles/_scrollbar.css
@@ -1,23 +1,23 @@
-html {
-    -ms-overflow-style: none;
-    scrollbar-width: thin;
-    scrollbar-color: #403d52 #191724;
-}
+    html {
+        -ms-overflow-style: none;
+        scrollbar-width: thin;
+        scrollbar-color: hsl(var(--rp-highlightHigh)) hsl(var(--rp-base));
+    }
 
-html::-webkit-scrollbar {
-    width: 0.75rem;
-    height: 0.75rem;
-}
+    html::-webkit-scrollbar {
+        width: 0.5rem;
+        height: 0.5rem;
+    }
 
-html::-webkit-scrollbar-thumb {
-    background-color: #403d52;
-    border-radius: 0.95rem;
-}
+    html::-webkit-scrollbar-thumb {
+        background-color: hsl(var(--rp-highlightHigh));
+        border-radius: 0.95rem;
+    }
 
-html::-webkit-scrollbar-thumb:hover {
-    background-color: #524f67;
-}
+    html::-webkit-scrollbar-thumb:hover {
+        background-color: hsl(var(--rp-highlightHigh));
+    }
 
-html::-webkit-scrollbar-track {
-    background-color: #191724;
-}
+    html::-webkit-scrollbar-track {
+        background-color: hsl(var(--rp-base));
+    }
